# CMakeTutorial

./: .gitignore  Basics of CMake_Tutorial.docx  CMakeLists.txt  README.md  main.cpp
mathLib/: CMakeLists.txt  calculator.cpp
mathLib/calci/: calculator.h
